--- a/ex3/src/main/resources/templates/sample/exLink.html
+++ b/ex3/src/main/resources/templates/sample/exLink.html
@@ -8,7 +8,7 @@
 <ul>
     <li th:each="dto : ${list}">
         <a th:href="@{/sample/exView(sno=${dto.sno})}">[[${dto}]]</a> &#45;&#45;&#45;&#45;
-        <a th:href="@{/sample/exView/{sno}(sno=${dto.sno})}">[[${dto}]]</a> ----
+        <a th:href="@{/sample/exView/{sno}(sno=${dto.sno})}">[[${dto}]]</a> &#45;&#45;&#45;&#45;
 
         [[${dto.sno}]] --- [[${#temporals.format(dto.regTime,'yyyy/MM/dd HH:mm:ss')}]]
     </li>
