--- a/guestbook/src/main/resources/templates/guestbook/list.html
+++ b/guestbook/src/main/resources/templates/guestbook/list.html
@@ -2,7 +2,33 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <th:block th:replace="~{/layout/basic :: setContent(~{this :: content} )}">
     <th:block th:fragment="content">
-        <h1 class="mt-4">GuestBook List Page</h1>
+        <h1 class="mt-4">GuestBook List Page
+            <span>
+                <a th:href="@{/guestbook/register}">
+                    <button type="button" class="btn btn-outline-primary">REGISTER</button>
+                </a>
+            </span>
+        </h1>
+
+        <form th:action="@{/guestbook/list}" method="get" id="searchForm">
+            <input type="hidden" name="page" value="1">
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <select class="custom-select" name="type">
+                        <option value="t" th:selected="${pageRequestDTO.type == 't'}">제목</option>
+                        <option value="c" th:selected="${pageRequestDTO.type == 'c'}">내용</option>
+                        <option value="w" th:selected="${pageRequestDTO.type == 'w'}">작성자</option>
+                        <option value="tc" th:selected="${pageRequestDTO.type == 'tc'}">제목+내용</option>
+                        <option value="tcw" th:selected="${pageRequestDTO.type == 'tcw'}">제목+내용+작성자</option>
+                    </select>
+                </div>
+                <input class="form-control" name="keyword" th:value="${pageRequestDTO.keyword}">
+                <div>
+                    <button class="btn btn-outline-secondary btn-search" type="button">Search</button>
+                    <button class="btn btn-outline-secondary btn-clear" type="button">Clear</button>
+                </div>
+            </div>
+        </form>
 
         <table class="table table-striped">
             <thead>
@@ -15,7 +41,11 @@
             </thead>
             <tbody>
                 <tr th:each="dto : ${result.dtoList}">
-                    <td>[[${dto.gno}]]</td>
+                    <th scope="row">
+                        <a th:href="@{/guestbook/read(gno=${dto.gno}, page=${result.page})}">
+                            [[${dto.gno}]]
+                        </a>
+                    </th>
                     <td>[[${dto.title}]]</td>
                     <td>[[${dto.writer}]]</td>
                     <td>[[${#temporals.format(dto.regDate, 'yyyy-MM-dd')}]]</td>
@@ -26,18 +56,73 @@
 <!--        페이징-->
         <ul class="pagination h-100 justify-content-center align-items-center">
             <li class="page-item" th:if="${result.prev}">
-                <a class="page-link" th:href="@{/guestbook/list(page = ${result.start - 1})}" tabindex="-1">Prev</a>
+                <a class="page-link"
+                   th:href="@{/guestbook/list(page = ${result.start - 1},
+                            type = ${pageRequestDTO.type},
+                            keyword = ${pageRequestDTO.keyword})}" tabindex="-1">Prev</a>
             </li>
 
             <li th:class="'page-item ' + ${result.page == page ? 'active' : ''}"
                 th:each="page : ${result.pageList}">
-                <a class="page-link" th:href="@{/guestbook/list(page=${page})}">[[${page}]]</a>
+                <a class="page-link"
+                   th:href="@{/guestbook/list(page=${page},
+                            type = ${pageRequestDTO.type},
+                            keyword = ${pageRequestDTO.keyword})}">[[${page}]]</a>
             </li>
 
             <li class="page-item" th:if="${result.next}">
-                <a class="page-link" th:href="@{/guestbook/list(page = ${result.end + 1})}">Next</a>
+                <a class="page-link"
+                   th:href="@{/guestbook/list(page = ${result.end + 1},
+                            type = ${pageRequestDTO.type},
+                            keyword = ${pageRequestDTO.keyword})}">Next</a>
             </li>
         </ul>
+
+        <!-- The Modal -->
+        <div class="modal" id="myModal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Modal Title</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <p>Modal body text goes here</p>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save Changes</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!-- The Modal End-->
+
+        <script th:inline="javascript">
+            var msg = [[${msg}]];
+            console.log(msg);
+
+            if (msg) {
+                $('.modal').modal();
+            }
+
+            var searchForm = $("#searchForm");
+
+            $(".btn-search").click(function(){
+                searchForm.submit();
+            });
+
+            $(".btn-clear").click(function(){
+                searchForm.empty().submit();
+            });
+        </script>
 
     </th:block>
 </th:block>
