--- a/board/src/main/resources/templates/board/list.html
+++ b/board/src/main/resources/templates/board/list.html
@@ -10,6 +10,26 @@
             </span>
         </h1>
 
+        <form th:action="@{/board/list}" method="get" id="searchForm">
+            <input type="hidden" name="page" value="1">
+            <div class="input-group mb-2">
+                <div class="input-group-prepend">
+                    <select class="custom-select" name="type">
+                        <option value="t" th:selected="${pageRequestDTO.type == 't'}">제목</option>
+                        <option value="c" th:selected="${pageRequestDTO.type == 'c'}">내용</option>
+                        <option value="w" th:selected="${pageRequestDTO.type == 'w'}">작성자</option>
+                        <option value="tc" th:selected="${pageRequestDTO.type == 'tc'}">제목+내용</option>
+                        <option value="tcw" th:selected="${pageRequestDTO.type == 'tcw'}">제목+내용+작성자</option>
+                    </select>
+                </div>
+                <input class="form-control" name="keyword" th:value="${pageRequestDTO.keyword}">
+                <div>
+                    <button class="btn btn-outline-secondary btn-search" type="button">Search</button>
+                    <button class="btn btn-outline-secondary btn-clear" type="button">Clear</button>
+                </div>
+            </div>
+        </form>
+
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -23,7 +43,7 @@
             <tbody>
             <tr th:each="dto : ${result.dtoList}">
                 <th>
-                    <a th:href="@{/board/read(bno=${dto.bno})}">[[${dto.bno}]]</a>
+                    <a th:href="@{/board/read(bno=${dto.bno}, page=${result.page})}">[[${dto.bno}]]</a>
                 </th>
                 <td>[[${dto.title}]] ---------- [<b th:text="${dto.replyCount}"></b>]</td>
                 <td>[[${dto.writerName}]] <small>[[${dto.writerEmail}]]</small></td>
@@ -34,15 +54,61 @@
 
         <ul class="pagination h-100 justify-content-center align-items-center">
             <li class="page-item" th:if="${result.prev}">
-                <a class="page-link" th:href="@{/board/list(page=${result.start - 1})}">Prev</a>
+                <a class="page-link" th:href="@{/board/list(page=${result.start - 1}, type=${pageRequestDTO.type}, keyword=${pageRequestDTO.keyword})}">Prev</a>
             </li>
             <li th:class="'page-item ' + ${result.page == page ? 'active' : ''}" th:each="page : ${result.pageList}">
-                <a class="page-link" th:href="@{/board/list(page=${page})}">[[${page}]]</a>
+                <a class="page-link" th:href="@{/board/list(page=${page}, type=${pageRequestDTO.type}, keyword=${pageRequestDTO.keyword})}">[[${page}]]</a>
             </li>
             <li class="page-item" th:if="${result.next}">
-                <a class="page-link" th:href="@{/board/list(page=${result.end + 1})}">Next</a>
+                <a class="page-link" th:href="@{/board/list(page=${result.end + 1}, type=${pageRequestDTO.type}, keyword=${pageRequestDTO.keyword})}">Next</a>
             </li>
         </ul>
+
+        <!-- The Modal -->
+        <div class="modal" id="myModal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Modal Title</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <p>Modal body text goes here</p>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save Changes</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!-- The Modal End-->
+
+        <script th:inline="javascript">
+            var msg = [[${msg}]];
+           console.log(msg);
+
+           if (msg) {
+               $('.modal').modal();
+           }
+
+           var searchForm = $("#searchForm");
+
+           $(".btn-search").click(function(){
+               searchForm.submit();
+           });
+
+           $(".btn-clear").click(function(){
+               searchForm.empty().submit();
+           });
+        </script>
 
     </th:block>
 </th:block>
