--- a/board/src/main/resources/templates/board/read.html
+++ b/board/src/main/resources/templates/board/read.html
@@ -7,7 +7,7 @@
         <div class="form-group">
             <label>#</label>
             <label>
-                <input class="form-control" type="text" readonly th:value="${dto.bno}">
+                <input class="form-control" type="text" name="bno" readonly th:value="${dto.bno}">
             </label>
         </div>
 
@@ -43,6 +43,183 @@
         <button type="button" class="btn btn-outline-primary">
             <a th:href="@{/board/list(page=${requestDTO.page})}">List</a>
         </button>
+
+        <div class="mt-4">
+            <h5>
+                <span class="badge badge-info addReply">
+                    Add Reply
+                </span>
+            </h5>
+
+            <h5><span class="badge badge-secondary replyCount">
+                Reply Count [[${dto.replyCount}]]
+            </span></h5>
+        </div>
+        <div class="list-group replyList">
+
+        </div>
+
+        <!-- The Modal -->
+        <div class="modal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">댓글 처리 화면</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="replyText" placeholder="Reply Text">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="replyer" placeholder="Replyer">
+                            <input type="hidden" name="rno">
+                        </div>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger replyRemove">Remove</button>
+                        <button type="button" class="btn btn-warning replyModify">Modify</button>
+                        <button type="button" class="btn btn-primary replySave">Save</button>
+                        <button type="button" class="btn btn-outline-secondary replyClose" data-dismiss="modal">Close</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <script th:inline="javascript">
+
+            $(document).ready(function(){
+
+                var bno = [[${dto.bno}]]
+
+                var listGroup = $(".replyList");
+
+                $(".replyCount").click(function(){
+
+                    $.getJSON( '/replies/board/' + bno, function(arr){
+                        console.log(arr);
+                    });
+
+                });
+
+                function formatTime(str){
+
+                    var date = new Date(str);
+
+                    return date.getFullYear() + '/' +
+                        (date.getMonth() + 1) + '/' +
+                        date.getDate() + ' ' +
+                        date.getHours() + ':' +
+                        date.getMinutes();
+                }
+
+                function loadJSONData() {
+                    $.getJSON( '/replies/board/' + bno, function(arr){
+                        console.log(arr);
+
+                        var str="";
+
+                        $('.replyCount').html(" Reply Count  " + arr.length);
+
+                        $.each(arr,function(idx,reply){
+                            console.log(reply);
+                            str += ' <div class="card-body" data-rno="' + reply.rno + '"><b>' + reply.rno + '</b>';
+                            str += ' <h5 class="card-title">' + reply.text + '</h5>';
+                            str += ' <h6 class="card-subtitle mb-2 text-muted">' + reply.replyer + '</h6>';
+                            str += ' <p class="card-text">' + formatTime(reply.regDate) + '</p>'
+                            str += ' </div>';
+                        });
+
+                        listGroup.html(str);
+                    });
+                }
+
+                $(".replyCount").click(function(){
+                    loadJSONData();
+                });
+
+                var modal = $(".modal");
+
+                $(".addReply").click(function () {
+
+                    modal.modal('show');
+
+                    $('input[name="replyText"]').val('');
+                    $('input[name="replyer"]').val('');
+
+                    $(".modal-footer .btn").hide();
+                    $(".replySave, .replyClose").show();
+                });
+
+                $(".replySave").click(function () {
+
+                    var reply = {
+                        bno:bno,
+                        text:$('input[name="replyText"]').val(),
+                        replyer:$('input[name="replyer"]').val()
+                    }
+
+
+                    $.ajax({
+                        url: '/replies',
+                        method: 'post',
+                        data:  JSON.stringify(reply),
+                        contentType: 'application/json; charset=utf-8',
+                        dataType: 'json',
+                        success: function(data){
+                            console.log(data);
+
+                            var newRno = parseInt(data);
+
+                            alert(newRno +"번 댓글이 등록되었습니다.")
+                            modal.modal('hide');
+                            loadJSONData();
+                        }
+                    });
+                });
+
+                $(".replyList").on("click", ".card-body", function(){
+                    var rno = $(this).data("rno");
+
+                    $("input[name='replyText']").val($(this).find('.card-title').html());
+                    $("input[name='replyer']").val($(this).find('.card-subtitle').html());
+                    $("input[name='rno']").val(rno);
+
+                    $(".modal-footer .btn").hide();
+                    $(".replyRemove, .replyModify, .replyClose").show();
+
+                    modal.modal("show");
+                });
+
+                 $(".replyRemove").click(function () {
+
+                    var rno = $("input[name='rno']").val();
+
+                    $.ajax({
+                        url: '/replies/' + rno,
+                        method: 'delete',
+                        success: function(result) {
+                            if(result === 'success') {
+                                console.log("result: " + result);
+                                alert("댓글이 삭제되었습니다.");
+                                modal.modal('hide');
+                                loadJSONData();
+                            }
+                        }
+                    })
+                 });
+
+            });   //document end
+
+        </script>
+
 
     </th:block>
 </th:block>
