--- a/board/src/main/resources/templates/board/read.html
+++ b/board/src/main/resources/templates/board/read.html
@@ -216,6 +216,36 @@
                     })
                  });
 
+
+                 $(".replyModify").click(function () {
+
+                    var rno = $("input[name='rno']").val();
+
+                    var reply = {
+                        rno: rno,
+                        bno: bno,
+                        text: $("input[name='replyText']").val(),
+                        replyer: $("input[name='replyer']").val()
+                    };
+
+                    $.ajax({
+                        url: '/replies/' + rno,
+                        method: 'put',
+                        data: JSON.stringify(reply),
+                        contentType: 'application/json; charset=utf-8',
+                        success: function(result) {
+                            console.log(result);
+
+                            if (result == 'success') {
+                                alert('댓글이 수정되었습니다.');
+                                modal.modal('hide');
+                                loadJSONData();
+                            }
+                        }
+                    });
+
+                 });
+
             });   //document end
 
         </script>
