--- a/mreview/src/main/resources/templates/movie/list.html
+++ b/mreview/src/main/resources/templates/movie/list.html
@@ -16,6 +16,15 @@
             <form th:action="@{/movie/list}" method="get" id="searchForm">
                 <input type="hidden" name="page" value="1">
                 <div class="input-group mb-2">
+                    <div class="input-group-prepend">
+                        <select class="custom-select" name="type">
+                            <option value="t" th:selected="${pageRequestDTO.type == 't'}">제목</option>
+                            <option value="c" th:selected="${pageRequestDTO.type == 'c'}">내용</option>
+                            <option value="w" th:selected="${pageRequestDTO.type == 'w'}">작성자</option>
+                            <option value="tc" th:selected="${pageRequestDTO.type == 'tc'}">제목+내용</option>
+                            <option value="tcw" th:selected="${pageRequestDTO.type == 'tcw'}">제목+내용+작성자</option>
+                        </select>
+                    </div>
                     <input class="form-control" name="keyword" th:value="${pageRequestDTO.keyword}">
                     <div>
                         <button class="btn btn-outline-secondary btn-search" type="button">Search</button>
